--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,24 @@
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>PS</title>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      html,
+      body,
+      #root {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+      }
+      html {
+        font-size: 16px;
+        font-family: Arial, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
